convert px sizes to rem, and fix bullet list wrapping and size of features to contain content within page

--- a/css/default.css
+++ b/css/default.css
@@ -155,8 +155,7 @@ body {
 .wf-blist {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center; 
+    justify-content: center;
     margin-top: var(--size-50);
 }
 
